# IoTWebApp

./: .gitignore  README.md  device2.json  device3.json  pyproject.toml
IoTEmulator/: Client.py  DeviceEmulator.py  __init__.py  config_type.py
IoTEmulator/src/: Client.py  DeviceEmulator.py  __init__.py  config_type.py
IoTEmulator/tests/: emulator_tests.py  pytest_test.py
backend/: .env_example  alembic.ini  asgi.py  config.py
backend/app/: __init__.py  constants.py  utils.py
backend/app/auth/: models.py  routes.py
backend/app/device/: __init__.py  models.py  routes.py
backend/app/docs/: __init__.py
backend/app/docs/components/: __init__.py  examples.py  responses.py  securitySchemes.py
backend/app/docs/paths/: __init__.py
backend/app/networks/: __init__.py  models.py  routes.py
backend/app/profile/: __init__.py  routes.py
backend/instance/: database.db
backend/migration/versions/: 0289aa6b4c77_initial_revision.py
example/: listener.py  main.py  publishers.py
front/: index.html  jest.config.mjs  package-lock.json  package.json
front/src/: App.jsx  index.css  main.jsx
front/src/components/AppBar/: AppBar.jsx  AppBar.module.css
front/src/components/AuthNav/: AuthNav.jsx  AuthNav.module.css
front/src/components/DeviceItem/: DeviceItem.jsx  DeviceItem.module.css  DeviceItem.test.js
front/src/components/DeviceList/: DeviceList.jsx  (+1 more)
front/src/redux/: store.js
tests/BackendTests/: tests.py
tests/FrontendTests/: conftest.py  test_login.py  test_logout.py  test_protected.py  test_register.py
tests/IoTEmulatorTests/: emulator_tests.py
(+50 files in other folders)
